<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--            TODO : modifier @drawables -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_informations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_informations" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_parameters"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_parameters" />
    </group>
</menu>