<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_tips"
        android:name="fr.iut.happyglan.ui.informations.InformationsFragment"
        android:label="@string/menu_tips"
        tools:layout="@layout/fragment_informations" />
    <fragment
        android:id="@+id/nav_map"
        android:name="fr.iut.happyglan.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="fr.iut.happyglan.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_informations"
        android:name="fr.iut.happyglan.ui.informations.InformationsFragment"
        android:label="@string/menu_informations"
        tools:layout="@layout/fragment_informations" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="fr.iut.happyglan.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_informations" />
    <fragment
        android:id="@+id/nav_parameters"
        android:name="fr.iut.happyglan.ui.informations.InformationsFragment"
        android:label="@string/menu_parameters"
        tools:layout="@layout/fragment_informations" />
</navigation>