<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pastel"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="405dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="325dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profile_picture"
                        android:paddingTop="20dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/profile_full_name"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="#FFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="275dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:background="@drawable/border">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_first_number_description"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:id="@+id/profile_first_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:background="@drawable/border">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_second_number_description"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:id="@+id/profile_second_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:background="@drawable/border">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/profile_third_number_description"
                                android:textSize="20sp"
                                />
                            <TextView
                                android:id="@+id/profile_third_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:paddingTop="10dp"
                                />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <LinearLayout
                    android:paddingLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/user"/>
                    <TextView
                        android:id="@+id/profile_email"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/donation"/>
                    <TextView
                        android:id="@+id/profile_phone_number"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:paddingLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_menu_slideshow"/>
                    <TextView
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>
                </LinearLayout><!--
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:paddingLeft="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/information"/>
                    <TextView
                        android:id="@+id/profile_information"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>
                </LinearLayout>-->

            </LinearLayout>

            <Button
                android:background="@drawable/button"
                android:textColor="@color/logo_yellow"
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Follow"
                android:padding="20dp"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>